--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8" />
     <title>Maayan's Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <header class="fade-in">
       <h1>Hello, I'm Maayan 👩‍💻</h1>
-      <p>
-        Junior software developer with a passion for clean code and creative
-        solutions.
-      </p>
+      <p>Junior Full-Stack Developer | Tel Aviv, Israel</p>
       <p class="contact-links">
-        <a href="CV - Maayan Swisa.pdf" target="_blank">View My Resume</a>
+        <a href="CV - Maayan Swisa.pdf" target="_blank"> Resume</a>
       </p>
-
       <div class="contact-links">
         <a href="mailto:maayanswisa9@gmail.com">Email</a>
         <a
@@ -26,6 +23,40 @@
         <a href="https://github.com/maayanswisa" target="_blank">GitHub</a>
       </div>
     </header>
+
+    <section id="summary" class="fade-in">
+      <h2>About Me</h2>
+      <p>
+        Motivated and detail-oriented Computer Science graduate with hands-on
+        experience in full-stack web development. Solid foundation in
+        algorithms, OOP, and data structures, combined with practical skills
+        from building 20+ real-world projects using React, Node.js, Express, and
+        MongoDB. Passionate about clean code, modern design, and working in a
+        collaborative team.
+      </p>
+    </section>
+
+    <section id="skills" class="fade-in">
+      <h2>Technical Skills</h2>
+      <ul class="skills-list">
+        <li>
+          <strong>Languages:</strong> JavaScript (ES6+), TypeScript, Java,
+          Python, SQL, HTML5, CSS3
+        </li>
+        <li>
+          <strong>Front-End:</strong> React.js, Next.js, Tailwind CSS, Bootstrap
+          5, Flexbox, DOM Manipulation
+        </li>
+        <li>
+          <strong>Back-End:</strong> Node.js, Express.js, EJS, RESTful APIs
+        </li>
+        <li><strong>Databases:</strong> MongoDB, PostgreSQL</li>
+        <li>
+          <strong>Tools & Concepts:</strong> Git, GitHub, VSCode, Postman,
+          Responsive Design, MVC, Agile
+        </li>
+      </ul>
+    </section>
 
     <section id="projects" class="fade-in">
       <h2>My Projects</h2>
@@ -60,11 +91,11 @@
 
       <div class="project-card fade-up">
         <span class="project-icon">🛍️</span>
-        <h3>E-Commerce</h3>
+        <h3>E-Commerce Website</h3>
         <p>
-          A modern clothing e-commerce website built with React and CSS. It
-          features elegant product displays, responsive design, and a clean,
-          stylish interface.
+          Built a responsive fashion store with product listings, cart, and user
+          authentication. Used React Hooks and Router for modular design.
+          Backend handled orders and user sessions with Express and MongoDB.
         </p>
         <a
           href="https://github.com/maayanswisa/E-Commerce-Website"
@@ -77,8 +108,8 @@
         <span class="project-icon">🎮</span>
         <h3>Gamers Android App</h3>
         <p>
-          An Android app for searching video games. You can filter by different
-          types, find all details about the game, and get a direct link to play.
+          An Android app for searching video games. Filter by types, see full
+          details, and get a direct link to play.
         </p>
         <a href="https://github.com/maayanswisa/Gamers" target="_blank"
           >View Code on GitHub</a
