--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
       </div>
 
       <div class="project-card fade-up">
+        <span class="project-icon">🎲</span>
+        <h3>Drum Kit</h3>
+        <p>Play Drums in my website.</p>
+        <a href="https://maayanswisa.github.io/Drum-Kit/" target="_blank"
+          >View Live Demo</a
+        >
+        |
+        <a href="https://github.com/maayanswisa/Drum-Kit" target="_blank"
+          >View Code on GitHub</a
+        >
+      </div>
+
+      <div class="project-card fade-up">
         <span class="project-icon">🍳</span>
         <h3>Recipe Website</h3>
         <p>
