--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
         >
       </div>
 
+
+<div class="project-card fade-up">
+  <span class="project-icon">🧩</span>
+  <h3>Simon Says</h3>
+  <p>Test your memory in this classic Simon Says game — repeat the sequence of colors for as long as you can without making a mistake!</p>
+  <a href="https://maayanswisa.github.io/Simon-Game/" target="_blank">View Live Demo</a>
+  |
+  <a href="https://github.com/maayanswisa/Simon-Game" target="_blank">View Code on GitHub</a>
+</div>
+
+
+
+      
+
       <div class="project-card fade-up">
         <span class="project-icon">🍳</span>
         <h3>Recipe Website</h3>
