--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
       <div class="project-card fade-up">
         <span class="project-icon">🥁</span>
         <h3>Drum Kit</h3>
-        <p>Interactive online drum kit — play realistic drum sounds using your keyboard or mouse and unleash your inner drummer!</p>
+        <p>
+          Interactive online drum kit — play realistic drum sounds using your
+          keyboard or mouse and unleash your inner drummer!
+        </p>
         <a href="https://maayanswisa.github.io/Drum-Kit/" target="_blank"
           >View Live Demo</a
         >
@@ -89,20 +92,6 @@
           >View Code on GitHub</a
         >
       </div>
-
-
-<div class="project-card fade-up">
-  <span class="project-icon">🧩</span>
-  <h3>Simon Says</h3>
-  <p>Test your memory in this classic Simon Says game — repeat the sequence of colors for as long as you can without making a mistake!</p>
-  <a href="https://maayanswisa.github.io/Simon-Game/" target="_blank">View Live Demo</a>
-  |
-  <a href="https://github.com/maayanswisa/Simon-Game" target="_blank">View Code on GitHub</a>
-</div>
-
-
-
-      
 
       <div class="project-card fade-up">
         <span class="project-icon">🍳</span>
