--- a/index.html
+++ b/index.html
@@ -70,13 +70,34 @@
           Simple, fun, and a real brain teaser.
         </p>
         <a href="https://maayanswisa.github.io/Simon-Game/" target="_blank"
-          >View Live Demo</a
+          > 🎬 View Live Demo</a
         >
         |
         <a href="https://github.com/maayanswisa/Simon-Game" target="_blank"
-          >View Code on GitHub</a
+          > 💻 View Code on GitHub</a
         >
       </div>
+
+
+<div class="project-card fade-up">
+  <span class="project-icon">🎭</span>
+  <h3>Daily Joke</h3>
+  <p>
+    A fun and interactive web app that fetches a random joke every time you visit! <br />
+    Built with <strong>Node.js</strong>, <strong>Express</strong>, <strong>Axios</strong>, and <strong>EJS</strong>, this project demonstrates how to make server-side GET requests to a public API (<strong>JokeAPI</strong>) and dynamically render the data in a user-friendly layout.
+  </p>
+  <a href="https://daily-joke-0lv8.onrender.com/" target="_blank">
+    🎬 View Live Demo
+  </a>
+  |
+  <a href="https://github.com/maayanswisa/Daily-Joke" target="_blank">
+    💻 View Code on GitHub
+  </a>
+</div>
+
+
+
+
 
       <div class="project-card fade-up">
         <span class="project-icon">🎲</span>
