--- a/index.html
+++ b/index.html
@@ -61,43 +61,37 @@
     <section id="projects" class="fade-in">
       <h2>My Projects</h2>
 
-
-            <div class="project-card fade-up">
+      <div class="project-card fade-up">
         <span class="project-icon">🧩</span>
         <h3>Simon Says</h3>
         <p>
           Watch the colors, repeat the pattern — and see how long you last!
           Simple, fun, and a real brain teaser.
         </p>
-        <a href="https://maayanswisa.github.io/Simon-Game/" target="_blank"
-          > 🎬 View Live Demo</a
+        <a href="https://maayanswisa.github.io/Simon-Game/" target="_blank">
+          🎬 View Live Demo</a
         >
         |
-        <a href="https://github.com/maayanswisa/Simon-Game" target="_blank"
-          > 💻 View Code on GitHub</a
+        <a href="https://github.com/maayanswisa/Simon-Game" target="_blank">
+          💻 View Code on GitHub</a
         >
       </div>
 
-
-<div class="project-card fade-up">
-  <span class="project-icon">🎭</span>
-  <h3>Daily Joke</h3>
-  <p>
-    A fun and interactive web app that fetches a random joke every time you visit! <br />
-    Built with <strong>Node.js</strong>, <strong>Express</strong>, <strong>Axios</strong>, and <strong>EJS</strong>, this project demonstrates how to make server-side GET requests to a public API (<strong>JokeAPI</strong>) and dynamically render the data in a user-friendly layout.
-  </p>
-  <a href="https://daily-joke-0lv8.onrender.com/" target="_blank">
-    🎬 View Live Demo
-  </a>
-  |
-  <a href="https://github.com/maayanswisa/Daily-Joke" target="_blank">
-    💻 View Code on GitHub
-  </a>
-</div>
-
-
-
-
+      <div class="project-card fade-up">
+        <span class="project-icon">🎭</span>
+        <h3>Daily Joke</h3>
+        <p>
+          A fun and interactive web app that fetches a random joke every time
+          you visit!
+        </p>
+        <a href="https://daily-joke-0lv8.onrender.com/" target="_blank">
+          🎬 View Live Demo
+        </a>
+        |
+        <a href="https://github.com/maayanswisa/Daily-Joke" target="_blank">
+          💻 View Code on GitHub
+        </a>
+      </div>
 
       <div class="project-card fade-up">
         <span class="project-icon">🎲</span>
@@ -106,12 +100,12 @@
           A simple dice rolling game built with HTML, CSS, and JavaScript. Click
           Play to roll the dice!
         </p>
-        <a href="https://maayanswisa.github.io/Dice-Game/" target="_blank"
-          >View Live Demo</a
+        <a href="https://maayanswisa.github.io/Dice-Game/" target="_blank">
+          🎬 View Live Demo</a
         >
         |
-        <a href="https://github.com/maayanswisa/Dice-Game" target="_blank"
-          >View Code on GitHub</a
+        <a href="https://github.com/maayanswisa/Dice-Game" target="_blank"></a>
+          💻 View Code on GitHub</a
         >
       </div>
 
@@ -122,12 +116,12 @@
           Interactive online drum kit — play realistic drum sounds using your
           keyboard or mouse and unleash your inner drummer!
         </p>
-        <a href="https://maayanswisa.github.io/Drum-Kit/" target="_blank"
-          >View Live Demo</a
+        <a href="https://maayanswisa.github.io/Drum-Kit/" target="_blank">
+          🎬 View Live Demo</a
         >
         |
-        <a href="https://github.com/maayanswisa/Drum-Kit" target="_blank"
-          >View Code on GitHub</a
+        <a href="https://github.com/maayanswisa/Drum-Kit" target="_blank">
+          💻 View Code on GitHub</a
         >
       </div>
 
@@ -138,8 +132,8 @@
           A simple recipe website built with basic HTML and CSS for practice
           purposes.
         </p>
-        <a href="https://github.com/maayanswisa/Cookbook" target="_blank"
-          >View Code on GitHub</a
+        <a href="https://github.com/maayanswisa/Cookbook" target="_blank">
+          💻 View Code on GitHub</a
         >
       </div>
 
@@ -154,7 +148,8 @@
         <a
           href="https://github.com/maayanswisa/E-Commerce-Website"
           target="_blank"
-          >View Code on GitHub</a
+        >
+          💻 View Code on GitHub</a
         >
       </div>
 
@@ -165,8 +160,8 @@
           An Android app for searching video games. Filter by types, see full
           details, and get a direct link to play.
         </p>
-        <a href="https://github.com/maayanswisa/Gamers" target="_blank"
-          >View Code on GitHub</a
+        <a href="https://github.com/maayanswisa/Gamers" target="_blank">
+          💻 View Code on GitHub</a
         >
       </div>
     </section>
