--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           🎬 View Live Demo</a
         >
         |
-        <a href="https://github.com/maayanswisa/Dice-Game" target="_blank"></a>
+        <a href="https://github.com/maayanswisa/Dice-Game" target="_blank">
           💻 View Code on GitHub</a
         >
       </div>
