--- a/index.html
+++ b/index.html
@@ -143,10 +143,9 @@
 
       <div class="project-card fade-up">
         <span class="project-icon">🍳</span>
-        <h3>Recipe Website</h3>
+        <h3>Recipe Android App</h3>
         <p>
-          A simple recipe website built with basic HTML and CSS for practice
-          purposes.
+          An Android app for recipe search. You can find a variety of food types and detailed recipes with a YouTube link for precise instructions. Save your favorite meals to prepare again in the future. Enjoy your meal!
         </p>
         <a href="https://github.com/maayanswisa/Cookbook" target="_blank">
           💻 View Code on GitHub</a
