--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
     <section id="projects" class="fade-in">
       <h2>My Projects</h2>
 
+
+      <div class="project-card fade-up">
+  <span class="project-icon">🌍</span>
+  <h3>World Map Tracker</h3>
+  <p>
+    A web app where users select a color and mark visited countries on an interactive world map. Built with Node.js, Express, EJS, and PostgreSQL.
+  </p>
+  <a href="https://family-travel-the-world.onrender.com/" target="_blank">
+    🎬 View Live Demo</a>
+  |
+  <a href="https://github.com/maayanswisa/Family-Travel-The-World" target="_blank">
+    💻 View Code on GitHub</a>
+</div>
+
+
       <div class="project-card fade-up">
         <span class="project-icon">🧩</span>
         <h3>Simon Says</h3>
