--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
   |
   <a href="https://github.com/maayanswisa/Family-Travel-The-World" target="_blank">
     💻 View Code on GitHub</a>
+        <small style="display:block; margin-top: 5px;">
+  🕒 Hosted on Render — may take up to a minute to load.
+</small>
+
 </div>
 
 
