--- a/index.html
+++ b/index.html
@@ -76,7 +76,22 @@
         <small style="display:block; margin-top: 5px;">
   🕒 Hosted on Render — may take up to a minute to load.
 </small>
+</div>
 
+      <div class="project-card fade-up">
+  <span class="project-icon">📝</span>
+  <h3>To-Do List</h3>
+  <p>
+    A full-stack task management app built with Node.js, Express, and PostgreSQL. Users can add, update, and delete tasks easily.
+  </p>
+  <div class="project-links">
+    <a href="https://to-do-list-79ow.onrender.com/" target="_blank">🎬 Live Demo</a>
+    |
+    <a href="https://github.com/maayanswisa/To-Do-List" target="_blank">💻 GitHub Code</a>
+  </div>
+  <small class="loading-note">
+    🕒 Hosted on Render — may take up to a minute to load.
+  </small>
 </div>
 
 
