--- a/index.html
+++ b/index.html
@@ -61,39 +61,49 @@
     <section id="projects" class="fade-in">
       <h2>My Projects</h2>
 
+      <div class="project-card fade-up">
+        <span class="project-icon">🌍</span>
+        <h3>World Map Tracker</h3>
+        <p>
+          A web app where users select a color and mark visited countries on an
+          interactive world map. Built with Node.js, Express, EJS, and
+          PostgreSQL.
+        </p>
+        <a href="https://family-travel-the-world.onrender.com/" target="_blank">
+          🎬 View Live Demo</a
+        >
+        |
+        <a
+          href="https://github.com/maayanswisa/Family-Travel-The-World"
+          target="_blank"
+        >
+          💻 View Code on GitHub</a
+        >
+        <small style="display: block; margin-top: 5px">
+          🕒 Hosted on Render — may take up to a minute to load.
+        </small>
+      </div>
 
       <div class="project-card fade-up">
-  <span class="project-icon">🌍</span>
-  <h3>World Map Tracker</h3>
-  <p>
-    A web app where users select a color and mark visited countries on an interactive world map. Built with Node.js, Express, EJS, and PostgreSQL.
-  </p>
-  <a href="https://family-travel-the-world.onrender.com/" target="_blank">
-    🎬 View Live Demo</a>
-  |
-  <a href="https://github.com/maayanswisa/Family-Travel-The-World" target="_blank">
-    💻 View Code on GitHub</a>
-        <small style="display:block; margin-top: 5px;">
-  🕒 Hosted on Render — may take up to a minute to load.
-</small>
-</div>
-
-      <div class="project-card fade-up">
-  <span class="project-icon">📝</span>
-  <h3>To-Do List</h3>
-  <p>
-    A full-stack task management app built with Node.js, Express, and PostgreSQL. Users can add, update, and delete tasks easily.
-  </p>
-  <div class="project-links">
-    <a href="https://to-do-list-79ow.onrender.com/" target="_blank">🎬 Live Demo</a>
-    |
-    <a href="https://github.com/maayanswisa/To-Do-List" target="_blank">💻 GitHub Code</a>
-  </div>
-  <small class="loading-note">
-    🕒 Hosted on Render — may take up to a minute to load.
-  </small>
-</div>
-
+        <span class="project-icon">📝</span>
+        <h3>To-Do List</h3>
+        <p>
+          A full-stack task management app built with Node.js, Express, and
+          PostgreSQL. Users can add, update, and delete tasks easily.
+        </p>
+        <div class="project-links">
+          <a href="https://to-do-list-79ow.onrender.com/" target="_blank"
+            >🎬 Live Demo</a
+          >
+          |
+          <a href="https://github.com/maayanswisa/To-Do-List" target="_blank"
+            >💻 GitHub Code</a
+          >
+        </div>
+        <small class="loading-note">
+          🕒 Hosted on Render — may take up to a minute to load.
+        </small>
+      </div>
 
       <div class="project-card fade-up">
         <span class="project-icon">🧩</span>
@@ -102,13 +112,15 @@
           Watch the colors, repeat the pattern — and see how long you last!
           Simple, fun, and a real brain teaser.
         </p>
-        <a href="https://maayanswisa.github.io/Simon-Game/" target="_blank">
-          🎬 View Live Demo</a
-        >
-        |
-        <a href="https://github.com/maayanswisa/Simon-Game" target="_blank">
-          💻 View Code on GitHub</a
-        >
+        <div class="project-links">
+          <a href="https://maayanswisa.github.io/Simon-Game/" target="_blank">
+            🎬 View Live Demo</a
+          >
+          |
+          <a href="https://github.com/maayanswisa/Simon-Game" target="_blank">
+            💻 View Code on GitHub</a
+          >
+        </div>
       </div>
 
       <div class="project-card fade-up">
@@ -118,13 +130,18 @@
           A fun and interactive web app that fetches a random joke every time
           you visit!
         </p>
-        <a href="https://daily-joke-0lv8.onrender.com/" target="_blank">
-          🎬 View Live Demo
-        </a>
-        |
-        <a href="https://github.com/maayanswisa/Daily-Joke" target="_blank">
-          💻 View Code on GitHub
-        </a>
+        <div class="project-links">
+          <a href="https://daily-joke-0lv8.onrender.com/" target="_blank">
+            🎬 View Live Demo
+          </a>
+          |
+          <a href="https://github.com/maayanswisa/Daily-Joke" target="_blank">
+            💻 View Code on GitHub
+          </a>
+        </div>
+        <small class="loading-note">
+          🕒 Hosted on Render — may take up to a minute to load.
+        </small>
       </div>
 
       <div class="project-card fade-up">
@@ -143,21 +160,29 @@
         >
       </div>
 
-
       <div class="project-card fade-up">
-  <span class="project-icon">📝</span>
-  <h3>Blog API</h3>
-  <p>
-    A full-stack blog app with a custom RESTful API. Create, edit, and delete posts with a sleek and responsive interface.
-  </p>
-  <a href="https://blog-api-frontend-r5jf.onrender.com/" target="_blank">
-    🎬 View Live Demo</a
-  >
-  |
-  <a href="https://github.com/maayanswisa/Blog-API" target="_blank">
-    💻 View Code on GitHub</a
-  >
-</div>
+        <span class="project-icon">📝</span>
+        <h3>Blog API</h3>
+        <p>
+          A full-stack blog app with a custom RESTful API. Create, edit, and
+          delete posts with a sleek and responsive interface.
+        </p>
+        <div class="project-links">
+          <a
+            href="https://blog-api-frontend-r5jf.onrender.com/"
+            target="_blank"
+          >
+            🎬 View Live Demo</a
+          >
+          |
+          <a href="https://github.com/maayanswisa/Blog-API" target="_blank">
+            💻 View Code on GitHub</a
+          >
+        </div>
+        <small class="loading-note">
+          🕒 Hosted on Render — may take up to a minute to load.
+        </small>
+      </div>
 
       <div class="project-card fade-up">
         <span class="project-icon">🥁</span>
@@ -179,7 +204,10 @@
         <span class="project-icon">🍳</span>
         <h3>Recipe Android App</h3>
         <p>
-          An Android app for recipe search. You can find a variety of food types and detailed recipes with a YouTube link for precise instructions. Save your favorite meals to prepare again in the future. Enjoy your meal!
+          An Android app for recipe search. You can find a variety of food types
+          and detailed recipes with a YouTube link for precise instructions.
+          Save your favorite meals to prepare again in the future. Enjoy your
+          meal!
         </p>
         <a href="https://github.com/maayanswisa/Cookbook" target="_blank">
           💻 View Code on GitHub</a
