--- a/index.html
+++ b/index.html
@@ -201,6 +201,17 @@
       </div>
 
       <div class="project-card fade-up">
+        <span class="project-icon">📝</span>
+        <h3>Keeper Notes App</h3>
+        <p>
+          A responsive note-taking web app built with React. Users can add and
+          delete notes with a modern, Material-UI-based interface, including
+          animated buttons and conditional rendering.
+        </p>
+        <a href="https://ngnmnq.csb.app/" target="_blank"> 🎬 View Live Demo</a>
+      </div>
+
+      <div class="project-card fade-up">
         <span class="project-icon">🍳</span>
         <h3>Recipe Android App</h3>
         <p>
