--- a/index.html
+++ b/index.html
@@ -103,6 +103,30 @@
       <div class="grid">
         <div class="project-card fade-up">
           <span class="project-icon">🌍</span>
+          <h3>Schedule Tutor</h3>
+          <p>
+            A full-stack web application for booking private lessons. Includes a
+            student booking flow, admin dashboard, authentication, and automated
+            email confirmations. Built with Next.js, TypeScript, Supabase, and
+            deployed on Vercel.
+          </p>
+          <a
+            href="https://schedule-tutor.vercel.app/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >🎬 Live Demo</a
+          >
+          |
+          <a
+            href="https://github.com/maayanswisa/Schedule"
+            target="_blank"
+            rel="noopener noreferrer"
+            >💻 GitHub Code</a
+          >
+        </div>
+
+        <div class="project-card fade-up">
+          <span class="project-icon">🌍</span>
           <h3>World Map Tracker</h3>
           <p>
             A web app where users select a color and mark visited countries on
