--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <h2>My Projects</h2>
       <div class="grid">
         <div class="project-card fade-up">
-          <span class="project-icon">🌍</span>
+          <span class="project-icon">📚</span>
           <h3>Schedule Tutor</h3>
           <p>
             A full-stack web application for booking private lessons. Includes a
@@ -441,3 +441,4 @@
     </script>
   </body>
 </html>
+
